boreal/tests/assets/invalid_files/parsing/str_to_int2.yar
rule a {
    strings:
        $a = /a{10000000000}/
    condition:
        $a
}
